# mailcat

./: MANIFEST.in  README.md  mailcat.py  pyproject.toml
.github/workflows/: tests.yml
src/mailcat/: __init__.py
tests/: test_e2e.py  test_mailcat.py
